recursion.logo.spiral.Spiral.scala.error
Erreur de compilation :
Spiral:2: error: not found: value void
  case 0 => void
            ^Spiral:6: error: recursive method spiral needs result type
    spiral(steps-1, angle, length + increment, increment)
    ^